--- a/package.json
+++ b/package.json
@@ -3,9 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.1",
+    "firebase": "^5.8.1",
+    "g": "^2.0.1",
+    "install": "^0.12.2",
+    "leaflet": "^1.4.0",
+    "leaflet-realtime": "^2.1.1",
+    "link": "^0.1.5",
+    "material-ui": "^0.20.2",
+    "npm": "^6.7.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2"
+    "react-geolocated": "^2.4.1",
+    "react-leaflet": "^2.2.0",
+    "react-native": "^0.58.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.2",
+    "recompose": "^0.30.0",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +36,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint-plugin-react": "^7.12.4"
+  }
 }
